<resources>
    <string name="app_name">Meal Recipe App</string>
    <string name="favorite">Favorite</string>
    <string name="serving">Serving</string>
    <string name="time">Time</string>
    <string name="search_recipe">Search Recipe</string>
    <string name="what_are_you_cooking_today">What are you cooking today?</string>
    <string name="meal_plan">Meal Plan</string>
    <string name="left_arrow">Left Arrow</string>
    <string name="right_arrow">Right Arrow</string>
    <string name="add_meal_plan">Add Meal Plan</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="sign_out">Sign Out</string>
    <string name="ingredients">Ingredients</string>
    <string name="description">Description</string>
    <string name="food_image">Food Image</string>
    <string name="like">Like</string>
    <string name="instructions">Instructions</string>
    <string name="everyone_can_be_a_chef">Everyone can be a chef</string>
    <string name="sign_in_with_google">Sign In With Google</string>
    <string name="loading">Loading</string>
    <string name="like_counts">%s likes</string>
    <string name="time_counts">%s min</string>
    <string name="serving_counts">%s servings</string>
    <string name="hello_user">Hi, %s</string>
    <string name="position">%s</string>
    <string name="ingredient_information">%s %s %s</string>
    <string name="check_root">Check Root</string>
    <string name="check_emulator">Check Emulator</string>
    <string name="check_usb_debugging">Check USB Debugging</string>
    <string name="check_accessibility_service">Check Accessibility Service</string>
</resources>