<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/posterImageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearance="@style/Rounded" />

        <ImageView
            android:id="@+id/favoriteImageView"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toEndOf="@+id/posterImageView"
            app:layout_constraintTop_toBottomOf="@+id/titileTextView"
            app:srcCompat="@drawable/ic_favorite"
            android:contentDescription="@string/favorite" />

        <ImageView
            android:id="@+id/timeImageView"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/posterImageView"
            app:layout_constraintStart_toEndOf="@+id/posterImageView"
            app:srcCompat="@drawable/ic_time"
            android:contentDescription="@string/time" />

        <ImageView
            android:id="@+id/servingImageView"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginStart="24dp"
            app:layout_constraintBottom_toBottomOf="@+id/posterImageView"
            app:layout_constraintStart_toEndOf="@+id/timeTextView"
            app:srcCompat="@drawable/ic_serving"
            android:contentDescription="@string/serving" />

        <TextView
            android:id="@+id/titileTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/montserrat_medium"
            android:maxLines="2"
            android:text=""
            android:ellipsize="end"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/posterImageView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/voteTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/montserrat"
            android:maxLines="2"
            android:text=""
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/favoriteImageView"
            app:layout_constraintTop_toBottomOf="@+id/titileTextView" />

        <TextView
            android:id="@+id/servingTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/montserrat"
            android:maxLines="2"
            android:text=""
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/posterImageView"
            app:layout_constraintStart_toEndOf="@+id/servingImageView" />

        <TextView
            android:id="@+id/timeTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/montserrat"
            android:maxLines="2"
            android:text=""
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/posterImageView"
            app:layout_constraintStart_toEndOf="@+id/timeImageView" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>
